[package]
name = "cryptkit-core"
authors = ["MooseTekk <moosetekk@gmail.com>"]
description = "Rust backend for cryptkit website"
version = "0.1.0"
edition = "2021"
license = "unlicense"
repository = "https://github.com/MooseTekk/cryptkit-core"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.82"
ascii85 = { git = "https://github.com/MooseTekk/ascii85" }
